load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "afd",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "**/*.bzl",
            "**/*.mk",
            "**/*.bp",
        ],
    ),
    outs = [
        "afd_module.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
